--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -47,7 +47,8 @@ default_border none
 # your displays after another 300 seconds, and turn your screens back on when
 # resumed. It will also lock your screen before your computer goes to sleep.
 exec_always fcitx5 -d --replace
-exec_always /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+# exec_always /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec_always /usr/lib/polkit-kde-authentication-agent-1
 exec_always mako
 ### Input configuration
 #
