--- a/waybar/.config/waybar/config
+++ b/waybar/.config/waybar/config
@@ -15,7 +15,7 @@
         "hyprland/window"
     ],
     "modules-right": [
-        "network",
+     //   "network",
         "cpu",
         "memory",
         "temperature",
