--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -12,10 +12,10 @@ exec-once=fcitx5 -d --replace
 exec-once=mako
 # exec-once=hyprpaper
 exec-once=randomWallpaper.sh
-exec-once=foot --server
+#exec-once=foot --server
 
-#$term=kitty
-$term=footclient
+$term=kitty
+#$term=footclient
 $launcher=fuzzel -f 'LXGWWenKai:size=14'
 
 #monitor=eDP-1,1920x1080@144,0x0,1
