--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -92,7 +92,8 @@ bind=SUPERSHIFT,SPACE,togglegroup
 # bind to programs
 bind=SUPER,return,exec,$term
 bind=SUPER,P,exec,$launcher
-bind=SUPER,B,exec,sh -c 'swww img $(ls -d ~/Pictures/Wallpaper/Images/* | sort -R | head -n1)'
+bind=SUPER,B,exec,randomWallpaper.sh
+bind=SUPERCTRL,B,exec,randomVideoWallpaper.sh
 bind=SUPER,T,exec,transtify.sh
 bind=SUPERSHIFT,S,exec,snapshot.sh
 
