--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -96,6 +96,7 @@ bind=SUPER,B,exec,randomWallpaper.sh
 bind=SUPERCTRL,B,exec,randomVideoWallpaper.sh
 bind=SUPER,T,exec,transtify.sh
 bind=SUPERSHIFT,S,exec,snapshot.sh
+bind=SUPERCTRL,C,exec,vibraclick.sh
 
 # Brightness control
 bind=SUPERCTRL,bracketright,exec,light -A 10
