--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -83,20 +83,24 @@ windowrule = float,title:^(rofi)$
 
 bindm=SUPER,mouse:272,movewindow
 bindm=SUPER,mouse:273,resizewindow
+bind=SUPER,mouse:274,togglefloating,active
 
 bind=SUPER,S,togglesplit
-bind=SUPERSHIFT,SPACE,togglegroup
-#bind=SUPER,h,changegroupactive,b
-#bind=SUPER,l,changegroupactive,f
+bind=SUPER,T,toggleopaque
+bind=SUPER,C,centerwindow
+bind=SUPER,SPACE,togglefloating,active
+bind=SUPERCTRL,SPACE,togglegroup
+bind=SUPER,G,changegroupactive,f
+bind=SUPERCTRL,G,changegroupactive,b
 
 # bind to programs
 bind=SUPER,return,exec,$term
 bind=SUPER,P,exec,$launcher
 bind=SUPER,B,exec,randomWallpaper.sh
-bind=SUPERCTRL,B,exec,randomVideoWallpaper.sh
-bind=SUPER,T,exec,transtify.sh
+bind=SUPERSHIFT,B,exec,randomVideoWallpaper.sh
+bind=SUPERSHIFT,T,exec,transtify.sh
 bind=SUPERSHIFT,S,exec,snapshot.sh
-bind=SUPERCTRL,C,exec,vibraclick.sh
+bind=SUPERSHIFT,C,exec,vibraclick.sh
 
 # Brightness control
 bind=SUPERCTRL,bracketright,exec,light -A 10
@@ -122,7 +126,6 @@ bind=SUPER,E,exec,nemo
 # bind to window manipulations
 bind=SUPER,F,fullscreen,1
 bind=SUPERCTRL,F,fullscreen,0
-bind=SUPER,SPACE,togglefloating,active
 bind=SUPER,H,movefocus,l
 bind=SUPER,L,movefocus,r
 bind=SUPER,K,movefocus,u
@@ -131,14 +134,16 @@ bind=SUPERCTRL,H,movewindow,l
 bind=SUPERCTRL,L,movewindow,r
 bind=SUPERCTRL,K,movewindow,u
 bind=SUPERCTRL,J,movewindow,d
-bind=SUPERSHIFT,H,resizeactive,-20 0
-bind=SUPERSHIFT,L,resizeactive,20 0
-bind=SUPERSHIFT,K,resizeactive,0 -20
-bind=SUPERSHIFT,J,resizeactive,0 20
+binde=SUPERSHIFT,H,resizeactive,-20 0
+binde=SUPERSHIFT,L,resizeactive,20 0
+binde=SUPERSHIFT,K,resizeactive,0 -20
+binde=SUPERSHIFT,J,resizeactive,0 20
 
 bind=SUPER,TAB,workspace,previous
-bind=SUPER,N,workspace,-1
-bind=SUPER,M,workspace,+1
+bind=SUPER,mouse_down,workspace,e-1
+bind=SUPER,mouse_up,workspace,e+1
+binde=SUPER,N,workspace,-1
+binde=SUPER,M,workspace,+1
 bind=SUPER,1,workspace,1
 bind=SUPER,2,workspace,2
 bind=SUPER,3,workspace,3
