--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -140,6 +140,7 @@ binde=SUPERSHIFT,K,resizeactive,0 -20
 binde=SUPERSHIFT,J,resizeactive,0 20
 
 bind=SUPER,TAB,workspace,previous
+binde=SUPER,W,workspace,empty
 bind=SUPER,mouse_down,workspace,e-1
 bind=SUPER,mouse_up,workspace,e+1
 binde=SUPER,N,workspace,-1
