--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -27,6 +27,7 @@ monitor=,preferred,auto,1
 
 input {
     follow_mouse=1
+    numlock_by_default=1
     touchpad {
         natural_scroll=1
     }
