--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -109,14 +109,14 @@ bind=SUPERCTRL,bracketleft,exec,light -U 10
 bind=,xf86monbrightnessup,exec,light -A 10
 bind=,xf86monbrightnessdown,exec,light -U 10
 # Audio Volumne Control
-bind=SUPER,bracketright,exec,pamixer -i 5
-bind=SUPER,bracketleft,exec,pamixer -d 5
-bind=SUPER,up,exec,pamixer -i 5
-bind=SUPER,down,exec,pamixer -d 5
-bind=,xf86audioraisevolume,exec,pamixer -i 5
-bind=,xf86audiolowervolume,exec,pamixer -d 5
-bind=SUPER,backslash,exec,pamixer --toggle-mute
-bind=,xf86audiomute,exec,pamixer --toggle-mute
+bind=SUPER,bracketright,exec,vol-up.sh
+bind=SUPER,bracketleft,exec,vol-down.sh
+bind=SUPER,up,exec,vol-up.sh
+bind=SUPER,down,exec,vol-down.sh
+bind=,xf86audioraisevolume,exec,vol-up.sh
+bind=,xf86audiolowervolume,exec,vol-down.sh
+bind=SUPER,backslash,exec,vol-toggle.sh
+bind=,xf86audiomute,exec,vol-toggle.sh
 
 # bind to functions
 bind=SUPERCTRL,Q,exit
