--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -104,19 +104,21 @@ bind=SUPERSHIFT,S,exec,snapshot.sh
 bind=SUPERSHIFT,C,exec,vibraclick.sh
 
 # Brightness control
-bind=SUPERCTRL,bracketright,exec,light -A 10
-bind=SUPERCTRL,bracketleft,exec,light -U 10
-bind=,xf86monbrightnessup,exec,light -A 10
-bind=,xf86monbrightnessdown,exec,light -U 10
+bind=SUPERCTRL,bracketright,exec,brightnessControl.sh up
+bind=SUPERCTRL,bracketleft,exec,brightnessControl.sh down
+bind=SUPER,right,exec,brightnessControl.sh up
+bind=SUPER,left,exec,brightnessControl.sh down
+bind=,xf86monbrightnessup,exec,brightnessControl up
+bind=,xf86monbrightnessdown,exec,brightnessControl down
 # Audio Volumne Control
-bind=SUPER,bracketright,exec,vol-up.sh
-bind=SUPER,bracketleft,exec,vol-down.sh
-bind=SUPER,up,exec,vol-up.sh
-bind=SUPER,down,exec,vol-down.sh
-bind=,xf86audioraisevolume,exec,vol-up.sh
-bind=,xf86audiolowervolume,exec,vol-down.sh
-bind=SUPER,backslash,exec,vol-toggle.sh
-bind=,xf86audiomute,exec,vol-toggle.sh
+bind=SUPER,bracketright,exec,volumeControl.sh up
+bind=SUPER,bracketleft,exec,volumeControl.sh down
+bind=SUPER,up,exec,volumeControl.sh up
+bind=SUPER,down,exec,volumeControl.sh down
+bind=,xf86audioraisevolume,exec,volumeControl.sh up
+bind=,xf86audiolowervolume,exec,volumeControl.sh down
+bind=SUPER,backslash,exec,volumeControl.sh toggle
+bind=,xf86audiomute,exec,volumeControl.sh toggle
 
 # bind to functions
 bind=SUPERCTRL,Q,exit
