--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -97,6 +97,7 @@ bind=SUPERCTRL,G,changegroupactive,b
 # bind to programs
 bind=SUPER,return,exec,$term
 bind=SUPER,P,exec,$launcher
+bind=SUPERSHIFT,P,exec,scriptsManager.sh
 bind=SUPER,B,exec,randomWallpaper.sh
 bind=SUPERSHIFT,B,exec,randomVideoWallpaper.sh
 bind=SUPERSHIFT,T,exec,transtify.sh
