--- a/waybar/.config/waybar/config
+++ b/waybar/.config/waybar/config
@@ -15,7 +15,7 @@
         "hyprland/window"
     ],
     "modules-right": [
-     //   "network",
+        "network",
         "cpu",
         "memory",
         "temperature",
@@ -96,10 +96,12 @@
 
     "network": {
         "interval": 5,
-        "format-wifi": " {essid} ({signalStrength}%)", // Icon: wifi
-        "format-ethernet": "󰌘 {ifname}: {ipaddr}/{cidr}", // Icon: ethernet
+        "format": "{ifname}: Up({bandwidthUpOctets}) Down({bandwidthDownOctets})",
+        /* "format-wifi": " {essid} ({signalStrength}%)", // Icon: wifi */
+        /* "format-ethernet": "󰌘 {ifname}: Up({bandwidthUpOctets}) Down({bandwidthDownOctets})", // Icon: ethernet */
         "format-disconnected": "⚠ Disconnected",
-        "tooltip-format": "{ifname}: {ipaddr}"
+        "tooltip-format-ethernet": "{ifname}: {ipaddr}/{cidr}",
+        "tooltip-format-wifi": "{ifname}: {essid} ({signalStrength}%)"
     },
 
     "wlr/workspaces": {
