--- a/waybar/.config/waybar/config
+++ b/waybar/.config/waybar/config
@@ -18,7 +18,7 @@
         "network",
         "cpu",
         "memory",
-        "temperature",
+        /* "temperature", */
         "battery",
         "pulseaudio",
         "tray",
