--- a/waybar/.config/waybar/config
+++ b/waybar/.config/waybar/config
@@ -2,46 +2,62 @@
     "layer": "top",
 
     "position": "top",
-
     // If height property would be not present, it'd be calculated dynamically
-    "height": 32,
+    "height": 20,
+    /* "margin-left":5, */
+    /* "margin-right":5, */
+    /* "margin-top":5, */
+    /* "margin-bottom":6, */
 
     "modules-left": [
         "sway/workspaces",
+        "custom/spaceleft",
         "wlr/workspaces",
+        /* "custom/spaceright", */
+        /* "hyprland/submap", */
+        "hyprland/window",
     ],
     "modules-center": [
-        "sway/window",
-        "hyprland/window"
     ],
     "modules-right": [
         "network",
         "cpu",
         "memory",
-        /* "temperature", */
-        "battery",
+        "disk",
+        //"temperature",
         "pulseaudio",
-        "tray",
+        "battery",
+        /* "clock", */
         "clock#date",
-        "clock#time"
+        "clock#time",
+        "tray",
     ],
 
-    "pulseaudio": {
-        "format": "{volume}% {icon}",
-        "format-bluetooth": "{volume}% {icon}",
-        "format-muted": "",
-        "format-icons": {
-            "headphone": "",
-            "hands-free": "",
-            "headset": "",
-            "phone": "",
-            "portable": "",
-            "car": "",
-            "default": ["", ""]
-        },
-        "scroll-step": 1,
-        "on-click": "pavucontrol",
-        "ignored-sinks": ["Easy Effects Sink"]
+    /* "hyprland/window":{ */
+    /*     "format": "-> {}", */
+    /*     "separate-outputs": true, */
+    /* }, */
+
+    "custom/spaceleft":{
+        "format": "",
+        /* "format": "⭘", */
+        "on-click": "wlogout",
+        "tooltip":false,
+    },
+
+    "custom/spaceright":{
+        "format": "",
+        "on-click": "rofi -theme slate.rasi -show combi -show-icons",
+        "tooltip":false,
+        
+    },
+
+
+    "disk": {
+        "interval": 30,
+        "format": " {free}",
+        "path": "/",
+        "on-click":"nautilus"
     },
 
     "battery": {
@@ -51,28 +67,55 @@
             "critical": 15
         },
         // Connected to AC
-        "format": "  {icon}  {capacity}%", // Icon: bolt
+        /* "format": "  {icon}  {capacity}%", // Icon: bolt */
+        "format": " {capacity}%", // Icon: bolt
+
         // Not connected to AC
-        "format-discharging": "{icon}  {capacity}%",
+        "format-discharging": "{icon} {capacity}%",
         "format-icons": [
-            "", // Icon: battery-full
-            "", // Icon: battery-three-quarters
-            "", // Icon: battery-half
-            "", // Icon: battery-quarter
-            ""  // Icon: battery-empty
+            /* "", // Icon: battery-full */
+            /* "", // Icon: battery-three-quarters */
+            /* "", // Icon: battery-half */
+            /* "", // Icon: battery-quarter */
+            /* ""  // Icon: battery-empty */
+            "",
+            "",
+            "",
+            "",
+            "",
         ],
         "tooltip": false
+    },
+
+    "clock":{
+        "format": " {:%H:%M}",
+        "format-alt": " {:%A, %B %d, %Y (%R)}",
+        "tooltip-format": "<tt><small>{calendar}</small></tt>",
+        "calendar": {
+                    "mode"          : "year",
+                    "mode-mon-col"  : 3,
+                    "weeks-pos"     : "right",
+                    "on-scroll"     : 1,
+                    "on-click-right": "mode",
+                    "format": {
+                              "months":     "<span color='#ffead3'><b>{}</b></span>",
+                              "days":       "<span color='#ecc6d9'><b>{}</b></span>",
+                              "weeks":      "<span color='#99ffdd'><b>W{}</b></span>",
+                              "weekdays":   "<span color='#ffcc66'><b>{}</b></span>",
+                              "today":      "<span color='#ff6699'><b><u>{}</u></b></span>"
+                              }
+                    }
     },
 
     "clock#time": {
         "interval": 1,
         "format": "{:%H:%M:%S}",
         "tooltip": false
+        //     
     },
-
     "clock#date": {
       "interval": 60,
-      "format": "  {:%e %b %Y}", // Icon: calendar-alt
+      "format": " {:%e.%b.%Y}", // Icon: calendar-alt
       "tooltip-format": "{:%e %B %Y}"
     },
 
@@ -83,7 +126,8 @@
         "states": {
           "warning": 70,
           "critical": 90
-        }
+        },
+        "on-click":"alacritty -t 'btop' -e btop",
     },
 
     "memory": {
@@ -92,13 +136,23 @@
         "states": {
             "warning": 70,
             "critical": 90
-        }
+        },
+        "on-click":"alacritty -t 'btop' -e btop",
     },
+
+    /* "network": { */
+    /*     "interval": 5, */
+    /*     //"format-wifi": "  {essid} ({signalStrength}%)", // Icon: wifi */
+    /*     "format-wifi": "直 {essid}", // Icon: wifi */
+    /*     "format-ethernet": "  {ifname}: {ipaddr}/{cidr}", // Icon: ethernet */
+    /*     "format-disconnected": " Disconnected",// */
+    /*     "tooltip-format": "{ifname}: {ipaddr}" */
+    /* }, */
 
     "network": {
         "interval": 5,
         /* "format": "{ifname}: Up({bandwidthUpOctets}) Down({bandwidthDownOctets})", */
-        "format": "Up({bandwidthUpOctets}) Down({bandwidthDownOctets})",
+        "format": "  Up({bandwidthUpOctets}) Down({bandwidthDownOctets})",
         /* "format-wifi": " {essid} ({signalStrength}%)", // Icon: wifi */
         /* "format-ethernet": "󰌘 {ifname}: Up({bandwidthUpOctets}) Down({bandwidthDownOctets})", // Icon: ethernet */
         "format-disconnected": "⚠ Disconnected",
@@ -107,7 +161,58 @@
     },
 
     "wlr/workspaces": {
-        "on-click": "activate"
+        "format":"{icon}",
+        "on-click": "activate",
+        "format-icons":{
+            //"1":"",
+            //"2":"",
+            //"3":"",
+            //"4":"",
+            //"5":"",
+            //"6":"",
+            //"7":"",
+            //"8":"",
+            //"9":"",
+            //"10":"",
+            //"11":"",
+            //"12":"",
+            //"13":"",
+            //"14":"ﬄ",
+            //"15":"﬐",
+
+            /*     ﱘ  */
+            "1":"",
+            "2":"",
+            "3":"",
+            "4":"",
+            "5":"",
+            "6":"",
+            "7":"",
+            "8":"",
+            "9":"",
+            "10":"",
+            "11":"",
+            "12":"",
+            "13":"",
+            "14":"ﬄ",
+            "15":"﬐",
+            "16":"",
+            "default": "",
+        },
+        "sort-by-number":true
+    },
+    "pulseaudio": {
+        "format": "{icon} {volume}",
+        "format-alt": "{icon} {volume}",
+        "format-alt-click": "click-right",
+        "format-muted": "婢",
+        "format-icons": {
+            "phone": ["", "", "", ""],
+            "default": ["", "", "", ""]
+        },
+        "scroll-step": 5,
+        "on-click": "pavucontrol",
+        "tooltip": false
     },
 
     "temperature": {
@@ -125,9 +230,10 @@
     },
 
     "tray": {
-        "icon-size": 21,
-        "spacing": 10
+        "icon-size": 20,
+        "spacing": 7,
     }
-
+        
 }
+
 
