--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -89,9 +89,10 @@ bind=SUPER,S,togglesplit
 bind=SUPER,T,toggleopaque
 bind=SUPER,C,centerwindow
 bind=SUPER,SPACE,togglefloating,active
-bind=SUPERCTRL,SPACE,togglegroup
-bind=SUPER,G,changegroupactive,f
-bind=SUPERCTRL,G,changegroupactive,b
+bind=SUPER,G,togglegroup
+bind=SUPERALT,N,changegroupactive,b
+bind=SUPERALT,M,changegroupactive,f
+# bind=SUPER,O,moveoutofgroup
 
 # bind to programs
 bind=SUPER,return,exec,$term
@@ -137,6 +138,10 @@ bind=SUPERCTRL,H,movewindow,l
 bind=SUPERCTRL,L,movewindow,r
 bind=SUPERCTRL,K,movewindow,u
 bind=SUPERCTRL,J,movewindow,d
+# bind=SUPERALT,H,moveintogroup,l
+# bind=SUPERALT,L,moveintogroup,r
+# bind=SUPERALT,K,moveintogroup,u
+# bind=SUPERALT,J,moveintogroup,d
 binde=SUPERSHIFT,H,resizeactive,-20 0
 binde=SUPERSHIFT,L,resizeactive,20 0
 binde=SUPERSHIFT,K,resizeactive,0 -20
