--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -37,7 +37,7 @@ set-hook -g client-attached 'run -b "cut -c3- ~/.config/tmux/tmux.conf | sh -s u
 
 # -- prefix
 unbind C-b
-set -g prefix 'C-w'
+set -g prefix 'C-s'
 
 # -- display
 set -g base-index 1
