tmux configuration update

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -142,25 +142,24 @@ set -g mode-keys vi
 
 bind -n M-v copy-mode
 
-# bind -T copy-mode-vi v send-keys -X begin-selection
-# bind -T copy-mode-vi C-v send-keys -X rectangle-toggle
-# bind -T copy-mode-vi n send-keys -X cursor-left
-# bind -T copy-mode-vi i send-keys -X cursor-right
-# bind -T copy-mode-vi u send-keys -X cursor-up
-# bind -T copy-mode-vi e send-keys -X cursor-down
-# bind -T copy-mode-vi h send-keys -X next-word-end
-# bind -T copy-mode-vi U send-keys -N 5 -X cursor-up
-# bind -T copy-mode-vi E send-keys -N 5 -X cursor-down
-# bind -T copy-mode-vi N send-keys -X start-of-line
-# bind -T copy-mode-vi I send-keys -X end-of-line
-# bind -T copy-mode-vi Y send-keys -X copy-end-of-line
-# bind -T copy-mode-vi y send-keys -X copy-selection-and-cancel
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi C-v send-keys -X rectangle-toggle
+# bind -T copy-mode-vi h send-keys -X cursor-left
+# bind -T copy-mode-vi l send-keys -X cursor-right
+# bind -T copy-mode-vi k send-keys -X cursor-up
+# bind -T copy-mode-vi j send-keys -X cursor-down
+# bind -T copy-mode-vi n send-keys -X next-word-end
+# bind -T copy-mode-vi K send-keys -N 5 -X cursor-up
+# bind -T copy-mode-vi J send-keys -N 5 -X cursor-down
+# bind -T copy-mode-vi g send-keys -X start-of-line
+# bind -T copy-mode-vi G send-keys -X end-of-line
+bind -T copy-mode-vi Y send-keys -X copy-end-of-line
+bind -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 # bind -T copy-mode-vi = send-keys -X search-again
 # bind -T copy-mode-vi = send-keys -X search-reverse
 
-
-bind b list-buffers
-bind p paste-buffer
+# bind b list-buffers
+# bind p paste-buffer
 
 # -- toggle_syn_input
 bind C-g if-shell '[[ $(tmux showw synchronize-panes | cut -d\  -f2) == "on" ]]' \
