--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -54,9 +54,11 @@ decoration {
     active_opacity=0.9
     inactive_opacity=0.9
     fullscreen_opacity=1
-    blur=1
-    blur_size=2
-    blur_passes=4
+    blur {
+        enabled=1
+        size=2
+        passes=4
+    }
 }
 
 animations {
