--- a/waybar/.config/waybar/config
+++ b/waybar/.config/waybar/config
@@ -3,16 +3,15 @@
 
     "position": "top",
     // If height property would be not present, it'd be calculated dynamically
-    "height": 20,
-    /* "margin-left":5, */
-    /* "margin-right":5, */
-    /* "margin-top":5, */
-    /* "margin-bottom":6, */
+    // "height": 20,
+    // "margin-left":5,
+    // "margin-right":5,
+    // "margin-top":5,
+    // "margin-bottom":5,
 
     "modules-left": [
-        "sway/workspaces",
         "custom/spaceleft",
-        "wlr/workspaces",
+        "hyprland/workspaces",
         /* "custom/spaceright", */
         /* "hyprland/submap", */
         "hyprland/window",
@@ -49,7 +48,6 @@
         "format": "",
         "on-click": "rofi -theme slate.rasi -show combi -show-icons",
         "tooltip":false,
-        
     },
 
 
@@ -160,7 +158,7 @@
         "tooltip-format-wifi": "{ifname}: {essid} ({signalStrength}%)"
     },
 
-    "wlr/workspaces": {
+    "hyprland/workspaces": {
         "format":"{icon}",
         "on-click": "activate",
         "format-icons":{
@@ -233,7 +231,4 @@
         "icon-size": 20,
         "spacing": 7,
     }
-        
 }
-
-
