modify kitty,tmux config

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -78,10 +78,7 @@ binds {
 }
 
 windowrule = float,title:^(rofi)$
-#windowrule = float,title:^(图片查看器)$
-#windowrule = float,title:^(zoom)$
-#windowrule = float,title:^(Zoom)$
-#windowrule = float,title:^(Zoom Cloud Meetings)$
+windowrulev2 = opacity 1.0 override 1.0 override,class:(kitty)
 
 bindm=SUPER,mouse:272,movewindow
 bindm=SUPER,mouse:273,resizewindow
