reload new config

--- a/aria2/.config/aria2/aria2.conf
+++ b/aria2/.config/aria2/aria2.conf
@@ -1,5 +1,5 @@
 #on-download-complete=/home/xiechengan/.aria2/delete_aria2.sh
-all-proxy=http://127.0.0.1:8888
+all-proxy=http://127.0.0.1:2000
 
 ## log默认值输出到stdout
 # log=/dev/null
@@ -22,9 +22,9 @@ continue=true
 ## 进度保存相关 ##
 
 # 从会话文件中读取下载任务
-input-file=/home/xiechengan/.aria2/aria2.session
+input-file=${HOME}/.config/aria2/aria2.session
 # 在Aria2退出时保存`错误/未完成`的下载任务到会话文件
-save-session=/home/xiechengan/.aria2/aria2.session
+save-session=${HOME}/.config/aria2/aria2.session
 # 定时保存会话, 0为退出时才保存, 需1.16.1以上版本, 默认:0
 save-session-interval=10
 
