add nvim plugins

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -16,6 +16,7 @@ setw -g monitor-activity off
 setw -g monitor-bell off
 
 set -g history-limit 10000
+set-option -g allow-passthrough on
 
 set-hook -g pane-focus-in "run -b 'bash ~/.config/tmux/fzf_panes.tmux update_mru_pane_ids'"
 bind -n M-w run -b 'bash ~/.config/tmux/fzf_panes.tmux new_window'
