--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -50,7 +50,6 @@ dwindle {
 
 decoration {
     rounding=8
-    multisample_edges=0
     active_opacity=0.9
     inactive_opacity=0.9
     fullscreen_opacity=1
@@ -78,7 +77,8 @@ binds {
 }
 
 windowrule = float,title:^(rofi)$
-windowrulev2 = opacity 1.0 override 1.0 override,class:(kitty)
+windowrulev2 = opaque,class:(kitty)
+windowrulev2 = opaque,class:(chrome)
 
 bindm=SUPER,mouse:272,movewindow
 bindm=SUPER,mouse:273,resizewindow
