--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -3,6 +3,9 @@
 #
 # Refer to the wiki for more information.
 
+exec-once=$HOME/.config/hypr/import_env tmux
+exec-once=$HOME/.config/hypr/import_env system
+
 exec-once=systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once=dbus-update-activation-environment --all
 #exec-once=/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
