update project create script

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -80,6 +80,7 @@ binds {
 }
 
 windowrule = float,title:^(rofi)$
+windowrule = opaque,title:(QEMU/KVM)$
 windowrulev2 = opaque,class:(kitty)
 windowrulev2 = opaque,class:(chrome)
 
