--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -17,6 +17,9 @@ exec-once=mako
 exec-once=randomWallpaper.sh
 #exec-once=foot --server
 
+env = GDK_SCALE,2
+env = WLR_NO_HARDWARE_CURSORS,1
+
 $term=kitty
 #$term=footclient
 $launcher=fuzzel -f 'LXGWWenKai:size=14'
@@ -24,9 +27,13 @@ $launcher=fuzzel -f 'LXGWWenKai:size=14'
 #monitor=eDP-1,1920x1080@144,0x0,1
 #workspace=eDP-1,1
 
-#monitor=HDMI-A-1,3840x2160@60,0x0,1
-monitor=,preferred,auto,1
+monitor=,highres,auto,1.5
+#monitor=,preferred,auto,1
 #workspace=HDMI-A-1,1
+
+xwayland {
+  force_zero_scaling = true
+}
 
 input {
     follow_mouse=1
