--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -17,6 +17,8 @@ exec-once=mako
 exec-once=randomWallpaper.sh
 #exec-once=foot --server
 
+env = GDK_SCALE,2
+
 $term=kitty
 #$term=footclient
 $launcher=fuzzel -f 'LXGWWenKai:size=14'
