--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -13,12 +13,17 @@ exec-once=/usr/lib/polkit-kde-authentication-agent-1
 exec-once=waybar
 exec-once=fcitx5 -d --replace
 exec-once=mako
+exec-once=/usr/lib/pam_kwallet_init
 # exec-once=hyprpaper
 exec-once=randomWallpaper.sh
 #exec-once=foot --server
 
+exec-once = xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 2
+exec-once = echo 'Xft.dpi:192' | xrdb -merge
+
 env = GDK_SCALE,2
 env = WLR_NO_HARDWARE_CURSORS,1
+env = XCURSOR_SIZE,32
 
 $term=kitty
 #$term=footclient
@@ -27,7 +32,7 @@ $launcher=fuzzel -f 'LXGWWenKai:size=14'
 #monitor=eDP-1,1920x1080@144,0x0,1
 #workspace=eDP-1,1
 
-monitor=,highres,auto,1.5
+monitor=,highres,auto,2
 #monitor=,preferred,auto,1
 #workspace=HDMI-A-1,1
 
@@ -79,7 +84,12 @@ animations {
 }
 
 misc {
-    no_direct_scanout = yes
+    # no_direct_scanout = yes
+}
+
+render {
+    direct_scanout = true
+    explicit_sync = false
 }
 
 binds {
@@ -87,16 +97,26 @@ binds {
 }
 
 windowrule = float,title:^(rofi)$
-windowrule = opaque,title:(QEMU/KVM)$
-windowrulev2 = opaque,class:(kitty)
-windowrulev2 = opaque,class:(chrome)
+# windowrule = opaque,title:(QEMU/KVM)$
+# windowrulev2 = opaque,class:(kitty)
+# windowrulev2 = opaque,class:(chrome)
+# windowrulev2 = opaque,class:(VirtualBox)
+
+windowrule = tag opaque,title:(QEMU/KVM)$
+windowrulev2 = tag opaque,class:(kitty)
+windowrulev2 = tag opaque,class:(chrome)
+windowrulev2 = tag opaque,class:(VirtualBox)
+
+windowrulev2 = tag opaque,tag:toggleopaque
+windowrulev2 = opaque,tag:opaque
 
 bindm=SUPER,mouse:272,movewindow
 bindm=SUPER,mouse:273,resizewindow
 bind=SUPER,mouse:274,togglefloating,active
 
 bind=SUPER,S,togglesplit
-bind=SUPER,T,toggleopaque
+# bind=SUPER,T,toggleopaque
+bind=SUPER,T,tagwindow,toggleopaque
 bind=SUPER,C,centerwindow
 bind=SUPER,SPACE,togglefloating,active
 bind=SUPER,G,togglegroup
