--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -18,10 +18,9 @@ exec-once=/usr/lib/pam_kwallet_init
 exec-once=randomWallpaper.sh
 #exec-once=foot --server
 
-exec-once = xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 2
-exec-once = echo 'Xft.dpi:192' | xrdb -merge
+exec-once = xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 1.5
+exec-once = echo 'Xft.dpi:144' | xrdb -merge
 
-env = GDK_SCALE,2
 env = WLR_NO_HARDWARE_CURSORS,1
 env = XCURSOR_SIZE,32
 
@@ -32,8 +31,8 @@ $launcher=fuzzel -f 'LXGWWenKai:size=14'
 #monitor=eDP-1,1920x1080@144,0x0,1
 #workspace=eDP-1,1
 
-monitor=,highres,auto,2
-#monitor=,preferred,auto,1
+# monitor=,highres,auto,2
+monitor=,preferred,auto,1.5
 #workspace=HDMI-A-1,1
 
 xwayland {
