update hyprland config

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -22,7 +22,7 @@ exec-once = xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOB
 exec-once = echo 'Xft.dpi:144' | xrdb -merge
 
 env = WLR_NO_HARDWARE_CURSORS,1
-env = XCURSOR_SIZE,32
+# env = XCURSOR_SIZE,32
 
 $term=kitty
 #$term=footclient
@@ -32,7 +32,7 @@ $launcher=fuzzel -f 'LXGWWenKai:size=14'
 #workspace=eDP-1,1
 
 # monitor=,highres,auto,2
-monitor=,preferred,auto,1.5
+monitor=,preferred,auto,1.25
 #workspace=HDMI-A-1,1
 
 xwayland {
