update yazi config

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -32,7 +32,7 @@ $launcher=fuzzel -f 'LXGWWenKai:size=14'
 #workspace=eDP-1,1
 
 # monitor=,highres,auto,2
-monitor=,preferred,auto,1.25
+monitor=,preferred,auto,1.5
 #workspace=HDMI-A-1,1
 
 xwayland {
@@ -101,9 +101,9 @@ windowrule = float,title:^(rofi)$
 # windowrulev2 = opaque,class:(chrome)
 # windowrulev2 = opaque,class:(VirtualBox)
 
-windowrule = tag opaque,title:(QEMU/KVM)$
+windowrulev2 = tag opaque,class:(virt-manager)
 windowrulev2 = tag opaque,class:(kitty)
-windowrulev2 = tag opaque,class:(chrome)
+windowrulev2 = tag opaque,class:(Google-chrome)
 windowrulev2 = tag opaque,class:(VirtualBox)
 
 windowrulev2 = tag opaque,tag:toggleopaque
