update hyprland config

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -21,9 +21,8 @@ exec-once=randomWallpaper.sh
 exec-once = xprop -root -f _XWAYLAND_GLOBAL_OUTPUT_SCALE 32c -set _XWAYLAND_GLOBAL_OUTPUT_SCALE 2
 exec-once = echo 'Xft.dpi:192' | xrdb -merge
 
-env = GDK_SCALE,2
 env = WLR_NO_HARDWARE_CURSORS,1
-env = XCURSOR_SIZE,32
+# env = XCURSOR_SIZE,32
 
 $term=kitty
 #$term=footclient
@@ -102,10 +101,10 @@ windowrule = float,title:^(rofi)$
 # windowrulev2 = opaque,class:(chrome)
 # windowrulev2 = opaque,class:(VirtualBox)
 
-windowrule = tag opaque,title:(QEMU/KVM)$
+windowrulev2 = tag opaque,class:(virt-manager)
 windowrulev2 = tag opaque,class:(kitty)
-windowrulev2 = tag opaque,class:(chrome)
-windowrulev2 = tag opaque,class:(VirtualBox)
+windowrulev2 = tag opaque,class:(Google-chrome)
+windowrulev2 = tag opaque,class:(VirtualBox Machine)
 
 windowrulev2 = tag opaque,tag:toggleopaque
 windowrulev2 = opaque,tag:opaque
